evewspace/Map/static/css/map.css
.mapDiv
{
    margin-top:10px;
}
.systemPanelHeader
{
    text-align:center;
    margin-left: 20px;
}
.footer
{
    margin-bottom: 150px;
}
.sysDetailsFooter
{
    text-align: left;
}
.systemTooltip
{
    width: 300px;
    display: none;
}
.wormholeTooltip
{
    width: 200px;
    display: none;
}
.systemStatsList
{
    list-style: none;
}
.popover
{
    width: 300px;
}
.occupiedText
{
    text-align: left;
    width: 100%;
}
.detailsLeft
{
    text-align: left;
}
.infoText
{
    text-align: left;
    width: 100%;
}
.sysInfoUpdated
{
    text-align: left;
}
.infoTitle
{
    text-align: center;
}
.signatureListDiv
{
    text-align: left;
}
.sysSigsList
{
    list-style: none;
}
.posListItem
{
    list-style: none;
}
.poslist_main
{
    margin-left: 25px;
}
.posSummary
{
    margin-left: 60px;
    margin-top: -10px;
}
.sigAddFormDiv
{
    text-align: left;
}
.sysFriendlySpan
{
    text-align: center;
}
.activePlayerPanel
{
    margin-left: 46px;
}
.sysLSdiv
{
    text-align: center;
}
.wormholeInfo
{
    text-align: center;
}
.sysMenuDiv
{
    z-index: 1;
}
h5
{
    text-align: center;
}
th
{
    padding-left: 10px;
    padding-right: 10px;
}
td
{
    padding-left: 15px;
    padding-right: 10px;
}
.tip {
  background: #eee;
  opacity: 100%;
  border: 1px solid #ccc;
  padding: 10px;
  border-radius: 8px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  position: relative;
  width: auto;
}

/* arrows - :before and :after */
.tip:before {
  position: absolute;
  display: inline-block;
  border-top: 7px solid transparent;
  border-right: 7px solid #eee;
  border-bottom: 7px solid transparent;
  border-right-color: rgba(0, 0, 0, 0.2);
  left: -14px;
  top: 20px;
  content: '';
}

.tip:after {
  position: absolute;
  display: inline-block;
  border-top: 6px solid transparent;
  border-right: 6px solid #eee;
  border-bottom: 6px solid transparent;
  left: -12px;
  top: 21px;
  content: '';
}

